[package]
name = "logger_bro"
version = "0.6.0"
edition = "2021"
authors = ["dingyisun0122@gmail.com"]
description = "A simple TUI for monitoring scientific computation tasks."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dingyisun0101/logger_bro"
readme = "README.md"
keywords = ["logger", "logging", "color", "cli"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
owo-colors = "4.2.3"
unicode-width = "0.2.2"
rand = "0.9.2"
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]
